src/interpreter/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package interpreter;
public class Parser implements ParserConstants {
        public static void main(String args[]) throws ParseException {

                try {
                        Parser parser = new Parser(System.in);
                        parser.start();
                }

                catch (Exception e) {
                    System.out.println(e.getMessage());
                        throw new Error("Parsing isleminde hata !");
                }
        }

  static final public AbstractGlobalScopeUnit start() throws ParseException {
  AbstractGlobalScopeUnit abstractGlobalScopeUnit;
    label_1:
    while (true) {
      abstractGlobalScopeUnit = globalScopeUnit();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRUCT:
      case CONST:
      case VOID:
      case INT:
      case BOOL:
      case DOUBLE:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
           {if (true) return abstractGlobalScopeUnit;}
    throw new Error("Missing return statement in function");
  }

  static final public AbstractGlobalScopeUnit globalScopeUnit() throws ParseException {
  AbstractGlobalScopeUnit globalScopeUnit;
    if (jj_2_1(3)) {
      globalScopeUnit = globalVariableDeclaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRUCT:
        globalScopeUnit = structDeclaration();
        break;
      case VOID:
      case INT:
      case BOOL:
      case DOUBLE:
      case STRING:
      case ID:
        globalScopeUnit = functionDeclaration();
          {if (true) return globalScopeUnit;}
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public AbstractGlobalScopeUnit functionDeclaration() throws ParseException {
  Token t; java.util.List parameterList; Stm s; String returnType;
    returnType = returnType();
    t = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    parameterList = parameterList();
    jj_consume_token(RPAREN);
    s = compoundStatement();
      {if (true) return new FunctionDeclaration(returnType, t.image, parameterList, s );}
    throw new Error("Missing return statement in function");
  }

  static final public String returnType() throws ParseException {
  Token t; String returnType;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      t = jj_consume_token(VOID);
                     {if (true) return t.image;}
      break;
    case INT:
    case BOOL:
    case DOUBLE:
    case STRING:
    case ID:
      returnType = type();
          {if (true) return returnType;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String type() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      t = jj_consume_token(INT);
                        {if (true) return t.image;}
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
      break;
    case BOOL:
      jj_consume_token(BOOL);
      break;
    case STRING:
      t = jj_consume_token(STRING);
                           {if (true) return t.image;}
      break;
    case ID:
      jj_consume_token(ID);
          {if (true) return t.image;}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public java.util.List parameterList() throws ParseException {
  java.util.List<Variable> parameterList;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      jj_consume_token(VOID);
      break;
    default:
      jj_la1[4] = jj_gen;
      parameterList = formalList();
                                                {if (true) return parameterList;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public java.util.List formalList() throws ParseException {
  Token t; String type; java.util.List<Variable> parameterList = new java.util.ArrayList();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        jj_consume_token(CONST);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      type = type();
      t = jj_consume_token(ID);
                                                     parameterList.add(new Variable(type, t.image));
    }
                  {if (true) return parameterList;}
    throw new Error("Missing return statement in function");
  }

  static final public StructDeclaration structDeclaration() throws ParseException {
    jj_consume_token(STRUCT);
    jj_consume_token(ID);
    jj_consume_token(LBRACE);
    structMemberDeclarations();
    jj_consume_token(RBRACE);
    jj_consume_token(SEMI);
          {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

  static final public void structMemberDeclarations() throws ParseException {
    type();
    jj_consume_token(ID);
    jj_consume_token(SEMI);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOL:
      case DOUBLE:
      case STRING:
      case ID:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      type();
      jj_consume_token(ID);
      jj_consume_token(SEMI);
    }
                  {if (true) return null;}
  }

  static final public GlobalVariableDeclaration globalVariableDeclaration() throws ParseException {
  String type; Token t; String id; String value; GlobalVariableDeclaration globalVariableDeclaration;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONST:
      jj_consume_token(CONST);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    type = type();
    t = jj_consume_token(ID);
    jj_consume_token(ASSIGN);
    initializer();
    jj_consume_token(SEMI);
          {if (true) return "a";}
    throw new Error("Missing return statement in function");
  }

  static final public void initializer() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case INTCONST:
    case DOUBLECONST:
    case STRCONST:
      simpleInitializer();
      break;
    case LBRACE:
      jj_consume_token(LBRACE);
      structInitializer();
      jj_consume_token(RBRACE);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public StrConst simpleInitializer() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTCONST:
      jj_consume_token(INTCONST);
      break;
    case DOUBLECONST:
      jj_consume_token(DOUBLECONST);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case STRCONST:
      t = jj_consume_token(STRCONST);
                                                                         {if (true) return new StrConst(t.image);}
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void structInitializer() throws ParseException {
    initializer();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      initializer();
    }
  }

  static final public Stm compoundStatement() throws ParseException {
 Stm s1,s2;
    jj_consume_token(LBRACE);
    s1 = statementList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      s2 = compoundStatement();
                                       s1 = new StmList(s1, s2);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
      {if (true) return s1;}
    throw new Error("Missing return statement in function");
  }

  static final public Stm statementList() throws ParseException {
 Stm s1;
    label_5:
    while (true) {
      s1 = statement();
                                         {if (true) return s1;}
      if (jj_2_2(2)) {
        ;
      } else {
        break label_5;
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Stm statement() throws ParseException {
 Stm stm;
    if (jj_2_3(2)) {
      variableDeclarationStatement();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case LPAREN:
      case SEMI:
      case PLUS:
      case MINUS:
      case NOT:
      case ID:
      case INTCONST:
      case DOUBLECONST:
      case STRCONST:
        expressionOrAssignmentStatement();
        break;
      case IF:
      case SWITCH:
        selectionStatement();
        break;
      case LBRACE:
        compoundStatement();
        break;
      case FOR:
      case WHILE:
      case DO:
        iterationStatement();
        break;
      case RETURN:
        returnStatement();
        break;
      case BREAK:
        breakStatement();
        break;
      case CONTINUE:
        continueStatement();
        break;
      case PRINT:
        stm = printStatement();
                                   {if (true) return stm;}
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void expressionOrAssignmentStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LPAREN:
    case PLUS:
    case MINUS:
    case NOT:
    case ID:
    case INTCONST:
    case DOUBLECONST:
    case STRCONST:
      expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        expression();
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(SEMI);
  }

/*
void assignmentStatement() :
{}
{
	<ID> <ASSIGN> expression() <SEMI>
}

*/


/*
void expressionStatement() :
{}
{
	expression() <SEMI> | <SEMI>
}
*/
  static final public void variableDeclarationStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONST:
      jj_consume_token(CONST);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    type();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      expression();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(SEMI);
  }

  static final public void selectionStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      ifStatement();
      break;
    case SWITCH:
      switchStatement();
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ifStatement() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    expression();
    jj_consume_token(RPAREN);
    statement();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      statement();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
  }

  static final public void switchStatement() throws ParseException {
    jj_consume_token(SWITCH);
    jj_consume_token(LPAREN);
    expression();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    switchBlock();
    jj_consume_token(RBRACE);
  }

  static final public void switchBlock() throws ParseException {
    labelBlock();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CASE:
      case DEFAULT_:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_6;
      }
      labelBlock();
    }
  }

  static final public void labelBlock() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CASE:
      jj_consume_token(CASE);
      constExpression();
      jj_consume_token(COLON);
      labelStatement();
      break;
    case DEFAULT_:
      jj_consume_token(DEFAULT_);
      jj_consume_token(COLON);
      labelStatement();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void labelStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case FOR:
    case WHILE:
    case DO:
    case SWITCH:
    case BREAK:
    case CONTINUE:
    case RETURN:
    case CONST:
    case TRUE:
    case FALSE:
    case INT:
    case BOOL:
    case DOUBLE:
    case STRING:
    case LPAREN:
    case LBRACE:
    case SEMI:
    case PLUS:
    case MINUS:
    case NOT:
    case PRINT:
    case ID:
    case INTCONST:
    case DOUBLECONST:
    case STRCONST:
      statementList();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
  }

  static final public void constExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTCONST:
      jj_consume_token(INTCONST);
      break;
    case DOUBLECONST:
      jj_consume_token(DOUBLECONST);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    case STRCONST:
      jj_consume_token(STRCONST);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void iterationStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
      statement();
      break;
    case DO:
      jj_consume_token(DO);
      statement();
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMI);
      break;
    case FOR:
      jj_consume_token(FOR);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case LPAREN:
      case PLUS:
      case MINUS:
      case NOT:
      case ID:
      case INTCONST:
      case DOUBLECONST:
      case STRCONST:
        expression();
        break;
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      jj_consume_token(SEMI);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case LPAREN:
      case PLUS:
      case MINUS:
      case NOT:
      case ID:
      case INTCONST:
      case DOUBLECONST:
      case STRCONST:
        expression();
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      jj_consume_token(SEMI);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case LPAREN:
      case PLUS:
      case MINUS:
      case NOT:
      case ID:
      case INTCONST:
      case DOUBLECONST:
      case STRCONST:
        expression();
        break;
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      statement();
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void returnStatement() throws ParseException {
    jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case LPAREN:
    case PLUS:
    case MINUS:
    case NOT:
    case ID:
    case INTCONST:
    case DOUBLECONST:
    case STRCONST:
      expression();
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
    jj_consume_token(SEMI);
  }

  static final public void breakStatement() throws ParseException {
    jj_consume_token(BREAK);
    jj_consume_token(SEMI);
  }

  static final public void continueStatement() throws ParseException {
    jj_consume_token(CONTINUE);
    jj_consume_token(SEMI);
  }

  static final public Stm printStatement() throws ParseException {
 Exp e; Token t;
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    e = expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMI);
                                                      {if (true) return new Print(e);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp expression() throws ParseException {
  Exp e;
    e = logicalOr();
                          {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp logicalOr() throws ParseException {
  Exp e1, e2;
    e1 = logicalAnd();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[29] = jj_gen;
        break label_7;
      }
      jj_consume_token(OR);
      e2 = logicalAnd();
                                      {if (true) return new LogicalOR(e1, e2);}
    }
          {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp logicalAnd() throws ParseException {
  Exp e1, e2;
    e1 = equalityExpression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_8;
      }
      jj_consume_token(AND);
      e2 = equalityExpression();
                                              {if (true) return new LogicalAND(e1, e2);}
    }
          {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp equalityExpression() throws ParseException {
  Exp e1, e2; Token t;
    e1 = relationalExpression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
      case NOTEQUAL:
        ;
        break;
      default:
        jj_la1[31] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        t = jj_consume_token(EQUAL);
        break;
      case NOTEQUAL:
        t = jj_consume_token(NOTEQUAL);
        break;
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = relationalExpression();
                                          {if (true) return new EqualityExpression(e1, e2, t.image);}
    }
          {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp relationalExpression() throws ParseException {
  Exp e1,e2; Token t;
    e1 = additiveExpression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESSTHAN:
      case GREATERTHAN:
      case LESSEQUAL:
      case GREATEREQUAL:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESSTHAN:
        t = jj_consume_token(LESSTHAN);
        break;
      case LESSEQUAL:
        t = jj_consume_token(LESSEQUAL);
        break;
      case GREATERTHAN:
        t = jj_consume_token(GREATERTHAN);
        break;
      case GREATEREQUAL:
        t = jj_consume_token(GREATEREQUAL);
        break;
      default:
        jj_la1[34] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = additiveExpression();
                                        {if (true) return new RelationalExpression(e1, e2, t.image);}
    }
          {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp additiveExpression() throws ParseException {
  Exp e1,e2; Token t;
    e1 = multiplicativeExpression();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[36] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = multiplicativeExpression();
                                               {if (true) return new AdditiveExpression(e1, e2, t.image);}
    }
          {if (true) return e1;}
    throw new Error("Missing return statement in function");
  }
